# premise_grammar

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  ERAS_SUPPORT.md  LSP_Roadmap.md  Makefile  PARSING_STATUS.md  Package.swift  QUICKSTART.md  README.md  SEMANTIC_SCOPES.md  binding.gyp  build.sh  go.mod  grammar.js  log.html  package-lock.json  package.json  parser.dylib  pyproject.toml  setup.py  test_queries.sh  tree-sitter-cuneiform.wasm  tree-sitter-premise.wasm  tree-sitter.json
.claude/: settings.local.json
.github/workflows/: validate-scopes.yml  validate.yml
bindings/c/: tree-sitter-cuneiform.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
examples/: theming_showcase.cune
extensions/: PREMISE_THEME.md  README.md
premise-core/: .gitignore  Cargo.toml  README.md  build.rs
premise-core/src/: api.rs  ast.rs  cst.rs  diagnostics.rs  imports.rs  ir.rs  lib.rs  planning.rs  symbols.rs  validation.rs
premise-core/tests/: ast_snapshots.rs  import_snapshots.rs  ir_snapshots.rs  plan_snapshots.rs  symbol_snapshots.rs  validation_snapshots.rs
premise-core/tests/snapshots/: ast_snapshots__01_entity_definitions.snap  ast_snapshots__02_entity_blocks.snap  ast_snapshots__03_nested_blocks.snap  ast_snapshots__04_story_structure.snap  ast_snapshots__05_imports_and_metadata.snap  ast_snapshots__06_plus_syntax.snap  ast_snapshots__07_full_example.snap  ast_snapshots__08_eras_demo.snap  ast_snapshots__09_adapters_and_block_scalars.snap  import_snapshots__05_imports_and_metadata.snap  import_snapshots__08_eras_demo.snap  ir_snapshots__01_entity_definitions.snap  ir_snapshots__04_story_structure.snap  ir_snapshots__05_imports_and_metadata.snap  ir_snapshots__06_plus_syntax.snap  ir_snapshots__07_full_example.snap  ir_snapshots__09_adapters_and_block_scalars.snap  plan_snapshots__05_imports_and_metadata.snap  plan_snapshots__06_plus_syntax.snap  plan_snapshots__09_adapters_and_block_scalars.snap  symbol_snapshots__01_entity_definitions.snap  symbol_snapshots__02_entity_blocks.snap  symbol_snapshots__03_nested_blocks.snap  symbol_snapshots__04_story_structure.snap  symbol_snapshots__05_imports_and_metadata.snap  symbol_snapshots__06_plus_syntax.snap  symbol_snapshots__07_full_example.snap  symbol_snapshots__08_eras_demo.snap  symbol_snapshots__09_adapters_and_block_scalars.snap  validation_snapshots__05_imports_and_metadata.snap
premise-lsp/: Cargo.toml
premise-lsp/src/: ast_utils.rs  diagnostics.rs  index.rs  main.rs  scope.rs  symbols.rs
premisecore/: Cargo.toml  README.md  pyproject.toml
premisecore/src/: lib.rs
queries/: brackets.scm  highlights.scm  indents.scm  outline.scm
scripts/: dev.sh  install-extensions.sh  sync-extensions.sh  update-zed-rev.sh  validate_scopes.py  zed-dev-mode.sh
src/: grammar.json  node-types.json  parser.c
tests/: full_test.cune  test_debug.cune  test_entity_def.cune  test_minimal.cune  test_nested.cune  test_runner.sh  test_simple.cune  test_zed.cune
(+66 files in other folders)
