[package]
name = "premise-core"
version = "0.1.0"
edition = "2021"
description = "Rust core for Premise language parsing and hydration"
license = "MIT OR Apache-2.0"

[lib]
name = "premise_core"
path = "src/lib.rs"

[[bin]]
name = "premise"
path = "src/bin/premise.rs"

[dependencies]
tree-sitter = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
glob = "0.3"
insta = { version = "1.39", features = ["json"] }
schemars = { version = "0.8", features = ["derive"] }

[build-dependencies]
cc = "1.0"


