[package]
name = "premisecore"
version = "0.1.0"
edition = "2021"
description = "Python bindings for premise-core"
license = "MIT OR Apache-2.0"

[lib]
name = "premisecore"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
premise-core = { path = "../premise-core" }
serde_json = "1.0"
schemars = { version = "0.8", features = ["derive"] }


