[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "premisecore"
version = "0.1.0"
description = "Python bindings for premise-core"
authors = [{ name = "Premise" }]
license = { text = "MIT OR Apache-2.0" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
]

[tool.maturin]
module-name = "premisecore"
features = ["pyo3/extension-module"]
